--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,8 @@
 /composer.phar
 /vendor/
 web/uploads/fotos_danio/*
-
+web/uploads/expedientes/*
+web/uploads/colegiados/*
 !/web/uploads/fotos_danio/.gitkeep
 web/uploads/fotos_danio_interno/*
 !/web/uploads/fotos_danio_interno/.gitkeep
